--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  cached_network_image: ^3.4.1
+  community_material_icon: ^5.9.55
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +66,10 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/shoe1.png
+
     # - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
