--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_rating_bar: ^4.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
