--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_slidable: ^3.1.2
 
 dev_dependencies:
   flutter_test:
