--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_slidable: ^3.1.2
+  flutter_screenutil: ^5.9.3
+  avatar_glow: ^3.0.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
